--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ logging.level.com.exam.civil.mapper=DEBUG
 
 spring.redis.host=localhost
 spring.redis.port=6379
+
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+spring.flyway.table=flyway_schema_history
+spring.flyway.enabled=true
