--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
             <version>6.5.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.62</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
