--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8080
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/civil
 spring.datasource.username=postgres
+spring.datasource.password=111111
 
 mybatis.mapper-locations=classpath:mapper/*.xml
 
@@ -15,3 +16,8 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.table=flyway_schema_history
 spring.flyway.enabled=true
+
+pagehelper.reasonable=true
+pagehelper.support-methods-arguments=true
+pagehelper.params=count=countSql
+spring.main.allow-circular-references=true
